# halo

./: CHANGELOG.md  Makefile  halo.cabal  readme.md
etc/: init.mk
src/Eg/: Ween.hs
